<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombreET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/descripcionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria" />

    <EditText
        android:id="@+id/categoriaET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lugar" />

    <EditText
        android:id="@+id/lugarET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/fechaLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha" />

    <Button
        android:id="@+id/camBTN"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/desdeCamaraBTN" />

    <Button
        android:id="@+id/galeriaBTN"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:text="@string/desdeGaleriaBTN" />

</LinearLayout>
